# any_of_is

./: CMakeLists.txt  LICENSE  README.md  any_of_is.h  main.cpp
